# Shadowblade

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Engine/: CMakeLists.txt
Engine/include/: definitions.hpp  shadowblade.hpp
Engine/include/Shadowblade/: Shadowblade.h
Engine/include/Shadowblade/Core/: AppWindow.h  Application.h  Base.h  BaseApplication.h  EntryPoint.h  PlatformDependent.h
Engine/src/: shadowblade.cpp
Engine/src/Shadowblade/Core/: AppWindow.cpp  Application.cpp  BaseApplication.cpp
Engine/tests/: CMakeLists.txt  test_shadowblade.cpp
